--- a/templates/post.html
+++ b/templates/post.html
@@ -18,14 +18,14 @@
       <tr>
         <th scope="col">Title</th>
         <th scope="col">Libraries</th>
-        <th scope="col">Date</th>
+        <th scope="col" class="date-column">Date</th>
       </tr>
     </thead>
     <tbody>
       <tr>
         <td>{{ post["title"] }}</td>
         <td>{{ post["libraries"] }}</td>
-        <td style="max-width:140px">{{ post["date"] }}</td>
+        <td class="date-column">{{ post["date"] }}</td>
       </tr>
     </tbody>
   </table>
