--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,12 @@
   a:hover {
     text-decoration-line:
   }
+  .date-column {
+    white-space: nowrap;
+ }
 </style>
+
+<meta name="viewport" content="width=device-width, initial-scale=0.8">
 
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
