--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-4 col-lg-6 col-xl-8">
         <div class="site-heading text-center">
-          <span class="subheading">This content is mostly just me playing around with features of different data-focused Python libraries. Posts will be mostly Jupyter Notebooks.</span>
+          <span class="subheading">This content is mostly just me playing around with features of different data-focused Python libraries. Generally posts are Jupyter Notebooks.</span>
         </div>
       </div>
     </div>
@@ -44,5 +44,3 @@
 </div>
 </div>
 </div>
-
-
