--- a/templates/post.html
+++ b/templates/post.html
@@ -1,15 +1,6 @@
 {% include "base.html" %}
 
-<style>
-    .custom-margin-top {
-        margin-top: 80px;
-    }
-    .custom-margin-top-table {
-        margin-top: 40px;
-    }
-</style>
-
-<div class="container custom-margin-top">
+<div class="container custom-margin-top-post">
     <div class="row justify-content-center">
     <div class="col-md-8">
 
@@ -34,4 +25,3 @@
 </div>
 
 {% include "/content/" + post["href"] %}
-
