--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
   .custom-margin-top-post {
      margin-top: 60px;
   }
+
   .custom-margin-top-table {
       margin-top: 20px;
   }
@@ -17,13 +18,13 @@
     font-size: 16px;
   }
 
-  a {
+  a.title {
     font-weight: bold;
     color: black;
     text-decoration-line: none;
   }
 
-  a:hover {
+  a.title:hover {
     text-decoration-line: underline;
   }
 
@@ -36,12 +37,26 @@
  }
  
   .item {
+    font-size: 12px;
     color: white;
+    text-decoration-line: none;
+ }
+
+  .item:hover {
+    color: black;
+    text-decoration-line: none; 
  }
  
- .contact-item {
+  .contact {
     color: white;
+    font-size: 12px;
     text-align: right;
+    text-decoration-line: none;
+ }
+
+  .contact:hover {
+    color: black;
+    text-decoration-line: none;
  }
 
 </style>
@@ -51,14 +66,13 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="{{ url_for("home") }}">David Weatherstone</a>
         <ul class="navbar-nav me-auto mb-2 mb-md-0">
-          <li class="nav-item">
+          <li>
             <a class="item" href="{{ url_for("home") }}">Home</a>
           </li>
         </ul>
         <li>
-          <a class="contact-item" href="https://github.com/davidweatherstone/Data-Analyst-Portfolio">GitHub</a>
-          <a class="contact-item" href="https://www.linkedin.com/in/davidweatherstone">LinkedIn</a>
+          <a class="contact" href="https://github.com/davidweatherstone/Data-Analyst-Portfolio">GitHub</a>
+          <a class="contact" href="https://www.linkedin.com/in/davidweatherstone">LinkedIn</a>
         </li>
       </div>
   </nav>
-
