--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,8 @@
 
 </style>
 
+<link rel="icon" href="./static/assets/favicon.ico" type="image/x-icon">
+
 <!-- Nav Bar -->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
